# tutti-scraper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  SECURITY.md  pyproject.toml  tutti_scraper.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  e2e.yml  release.yml
docs/: REFERENCE.md
tests/: conftest.py  test_cli.py  test_client.py  test_e2e.py  test_io.py  test_listing_url.py  test_price_constraint.py  test_scrape.py  test_scraper.py  test_search.py
