[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutti-scraper"
description = "Free, keyless scraper and library for tutti.ch listings. Unofficial, not affiliated with Tamedia or tutti.ch."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Daniel Košč", email = "maintainer@danielkosc.eu" }]
dependencies = ["requests~=2.34"]
dynamic = ["version"]
keywords = ["tutti", "web-scraping", "scraper", "classifieds", "switzerland", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/danyk20/tutti-scraper"
Repository = "https://github.com/danyk20/tutti-scraper"
Issues = "https://github.com/danyk20/tutti-scraper/issues"
Changelog = "https://github.com/danyk20/tutti-scraper/blob/master/CHANGELOG.md"

[project.scripts]
tutti-scraper = "tutti_scraper:run_cli"

[project.optional-dependencies]
dev = [
    "pytest~=9.1",
    "pytest-cov~=7.1",
    "responses~=0.26",
    "ruff~=0.15",
    "mypy~=2.1",
    "types-requests~=2.33",
]

[tool.hatch.version]
path = "tutti_scraper.py"

[tool.hatch.build.targets.wheel]
include = ["tutti_scraper.py"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that make real network calls to tutti.ch",
]
addopts = "-m 'not e2e' --cov=tutti_scraper --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["tutti_scraper"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern syntax)
    "B",   # flake8-bugbear (common footguns)
]

[tool.mypy]
python_version = "3.12"
files = ["tutti_scraper.py"]
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
# Permissive on purpose: this is a small single-file utility, not chasing
# --strict. The goal is catching real mismatches, not maximal rigor.
